Updated margins for header footer content wrapper and p

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -39,13 +39,13 @@
       </nav>
     </div>
   </header>
-  <main>
+  <main> <!-- Hero Area -->
     <section class="hero-area">
       <div class="content-wrapper">
         <h1>Retreat from the desk, return refreshed.</h1>
       </div>
     </section>
-    <aside>
+    <aside> <!-- Aside Area -->
       <div class="content-wrapper">
         <div class="form-description">
           <h3>Want to join the next retreat?</h3>
@@ -57,7 +57,7 @@
           <input type="button" value="Download Itinerary">
         </div>
       </div>
-    </aside>
+    </aside> <!-- Features Section -->
     <section class="features">
       <div class="content-wrapper">
         <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
@@ -98,8 +98,8 @@
           </article>
         </div>
       </div>
-    </section>
-    <section class="reviews">
+    </section> <!-- Reviews Area -->
+    <section class="reviews"> 
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
         <article>
