Added responsive images to all pages

--- a/homepage/about/index.html
+++ b/homepage/about/index.html
@@ -12,7 +12,7 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-<!-- Google Fonts -->
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
   <link rel="manifest" href="../site.webmanifest">
@@ -29,9 +29,11 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#">
-        <img src="" alt="unplugged logo">
-      </a>
+      <figure>
+        <a href="../index.html">
+          <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -88,7 +90,7 @@
             </address>
           </div>
         </div>
-      </div>  
+      </div>
     </section>
   </main>
 
