--- a/homepage/about/index.html
+++ b/homepage/about/index.html
@@ -22,6 +22,8 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
 
+  <script src="https://kit.fontawesome.com/5f075d2eb5.js" crossorigin="anonymous"></script>
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -62,10 +64,12 @@
     </section>
     <section class="map">
       <figure>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1602919.108038786!2d-90.13923849542051!3d38.30958589480567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88773f365286ee95%3A0x9874aee041966274!2sCrab%20Orchard%20National%20Wildlife%20Refuge!5e0!3m2!1sen!2sus!4v1701880993360!5m2!1sen!2sus"
-          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1602919.108038786!2d-90.13923849542051!3d38.30958589480567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88773f365286ee95%3A0x9874aee041966274!2sCrab%20Orchard%20National%20Wildlife%20Refuge!5e0!3m2!1sen!2sus!4v1701880993360!5m2!1sen!2sus"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
       </figure>
     </section>
     <section class="contact-section">
