--- a/homepage/index.html
+++ b/homepage/index.html
@@ -158,13 +158,13 @@
           <h4>Social</h4>
           <div class="social-icons">
             <p>
-              <a href="#"></a>
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
             </p>
             <p>
-              <a href="#"></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
             </p>
             <p>
-              <a href="#"></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
             </p>
           </div>
         </div>
