--- a/homepage/about/index.html
+++ b/homepage/about/index.html
@@ -117,13 +117,13 @@
           <h4>Social</h4>
           <div class="social-icons">
             <p>
-              <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </p>
             <p>
-              <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+              <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
             </p>
             <p>
-              <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+              <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
             </p>
           </div>
         </div>
