--- a/homepage/faq/index.html
+++ b/homepage/faq/index.html
@@ -95,13 +95,13 @@
           <h4>Social</h4>
           <div class="social-icons">
             <p>
-              <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </p>
             <p>
-              <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+              <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
             </p>
             <p>
-              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram" target="_blank"></i></a>
             </p>
           </div>
         </div>
